Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.0 (unreleased)

    Bugs fixed

      - Collector #2208: rewriting/setting the 'charset' part of the content-type
        HTTP header will be done only for 'text/*'


  Zope 2.10.0 (2006/10/04)

    Bugs fixed

  
  Zope 2.10.0 RC 1 (2006/09/25)

    Bugs fixed

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2187: PUT_factory broken
      
  Zope 2.10.0 beta 2 (2006/09/17)

    Bugs fixed

      - Collector #2117: Don't choke in 'unrestrictedTraverse' for '+'
        path elements.

      - Collector #2185: Log username for FCGI requests.

      - Collector #2152: Fixed MailHost documentation; simple_send does not
        process or validate its arguments in any way.

      - Collector #2175: ZTUtils.make_hidden_input did not escape double-quotes.

      - Collector #2176: Fixed bad logging call.

      - Collector #1907: Moved 'alt' property from File to Image.

      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
        Zope startup to fail.

      - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.

      - Collector #2178: Fix ZopeTestCase doctest support for layers

  Zope 2.10.0 beta 2 (2006/08/20)

    Bugs Fixed

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Updated Five to stable 1.5 release.

      - Traversal order changes were causing WebDAV requests which used
        acquisition to fail.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

      - Fix #2141: TALES doesn't traverse correctly over 'repeat'